fixed button not horizontal align on mobile

--- a/docs/_sass/jekyll-theme-cayman.scss
+++ b/docs/_sass/jekyll-theme-cayman.scss
@@ -71,7 +71,7 @@ a {
 .btn {
   display: flex;
   justify-content: center;
-  text-align: left;
+  text-align: center;
   margin-bottom: 1rem;
   color: rgba(255, 255, 255, 0.7);
   background-color: rgba(255, 255, 255, 0.08);
@@ -106,17 +106,6 @@ a {
   @include medium {
     padding: 0.6rem 0.9rem;
     font-size: 0.9rem;
-    .flex-parent {
-      display: flex;
-    }
-    
-    .jc-center {
-      justify-content: center;
-    }
-    
-    button.margin-right {
-      margin-right: 20px;
-    }
   }
 
   @include small {
